# emulateme

./: Cargo.toml  README.md
emgui/: Cargo.toml
emgui/src/: background.wgsl  hardware.rs  main.rs  shader.wgsl  sprite.wgsl  streamer.rs  window.rs
emgui/src/hardware/: background.rs  background.wgsl  palette.rs  renderer.rs  shared.rs  sprite.rs  sprite.wgsl
emhardware/: Cargo.toml
emhardware/src/: background.rs  lib.rs  renderer.rs  shared.rs  sprite.rs
emserver/: Cargo.toml
emserver/build-protobuf/: Cargo.toml
emserver/build-protobuf/src/: main.rs
emserver/src/: delimiter.rs  main.rs  messages.rs  server.rs
src/: controller.rs  cpu.rs  decoder.rs  disassembler.rs  interpreter.rs  lib.rs  memory.rs  ppu.rs  renderer.rs  rom.rs  software.rs  state.rs
