[package]
name = "emgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version="0.29.3", features = ["rwh_05"] }
log = "0.4.20"
env_logger = "0.10.0"
wgpu = "0.18.0"
anyhow = "1.0.75"
pollster = "0.3.0"
bitflags = "2.4.1"
bytemuck = { version="1.14.0", features = ["derive"] }
emulateme = { path=".." }
