[package]
name = "emhardware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
anyhow = "1.0.75"
bitflags = "2.4.1"
emulateme = { path = ".." }
