[package]
name = "emserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tokio = { version = "1.34.0", features = ["rt", "net", "macros", "io-util", "rt-multi-thread"] }
anyhow = "1.0.75"
bitflags = { version = "2.4.1", features = [] }
postcard = { version = "1.0.8", features = ["alloc"] }
emulateme = { path=".." }
